src/styles/common.scss
/* ... */
.font-size-medium { font-size : medium; }
.font-size-large { font-size : large; }
.font-size-inherit { font-size : inherit; }
.font-weight-bold { font-weight : bold; }
.font-monospace { font-family: v.$codeFontFamily; }
/*************************************************** FONT- */

/* POSITION- ***********************************************/
.position-relative { position : relative;}
.position-absolute { position : absolute;}
.position-fixed { position : fixed;}
.position-sticky { position : sticky; z-index : 2; }
/*********************************************** POSITION- */

/* DISPLAY- ************************************************/
.display-block { display : block; }
.display-inline-block { display : inline-block; }
.display-flex { display : flex; }
.display-inline-flex { display : inline-flex; }
/************************************************ DISPLAY- */

/* ALIGN- ***************************************************/
.align-self-center { align-self : center; }
.align-self-end { align-self : flex-end; }
.align-self-start { align-self : flex-start; }
.align-content-center { align-content : center; }
.align-items-top { align-items : flex-start; }
.align-items-center { align-items : center; }
.align-items-end { align-items : flex-end }
/*************************************************** ALIGN- */

/* JUSTIFY- *************************************************/
.justify-content-center { justify-content : center; }
.justify-content-right { justify-content : right; }
.justify-content-space-between { justify-content : space-between; }
.justify-self-center { justify-self : center; }
/************************************************* JUSTIFY- */

/* WIDTH ****************************************************/
.width-100p { width : 100%; }
.width-inherit { width : inherit; }
.width-fit-content { width : fit-content; }
/*************************************************** WIDTH */

/* HEIGHT ***************************************************/
.height-100p { height : 100%; }
.height-inherit { height : inherit; }
/*************************************************** HEIGHT */

/* LINE- ***************************************************/
.line-height-normal { line-height : normal; }
.line-height-1 { line-height : 1; }
/*************************************************** LINE- */

/* FLEX- ***************************************************/
.flex-direction-column { flex-direction : column; }
.flex-wrap { flex-wrap : wrap; }
.flex-wrap-nowrap { flex-wrap : nowrap; }
/*************************************************** FLEX- */

/* OVERFLOW- ***********************************************/
.overflow-hidden { overflow : hidden; }
.overflow-auto { overflow : auto; }
.overflow-clip { overflow : clip; }
/*********************************************** OVERFLOW- */

/* CURSOR- *************************************************/
.cursor-pointer { cursor : pointer; }
.cursor-default { cursor : default; }
.cursor-not-allowed { cursor : not-allowed; }
/************************************************* CURSOR- */

.hover-scale {
  transition : all 0.2s ease-in-out;
  
  &:hover {
    transform : scale(1.5);
  }
}

.link {
  @extend link;
}

.box-shadow { @include m.boxShadow(); }

.translate {
  &.absolute-center { position: absolute; }
  &.fixed-center { position: fixed; }
  
  top       : 50%;
  left      : 50%;
  transform : translate(-50%, -50%);
}

.code {
  @extend code;
}
/* ... */

